--- a/二维码/Classes/DetectorQRCode/Controller/DetectorQRCodeVC.storyboard
+++ b/二维码/Classes/DetectorQRCode/Controller/DetectorQRCodeVC.storyboard
@@ -16,14 +16,46 @@
                     <view key="view" contentMode="scaleToFill" id="Ck8-3b-QEZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="erweima" translatesAutoresizingMaskIntoConstraints="NO" id="UkX-n7-BdE">
+                                <rect key="frame" x="68" y="117" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="Rdw-KD-qKw"/>
+                                    <constraint firstAttribute="width" constant="240" id="acl-1w-VBV"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Wj-Cp-Sa8">
+                                <rect key="frame" x="156" y="272" width="64" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="QRW-74-SeA"/>
+                                    <constraint firstAttribute="width" constant="64" id="UnH-EA-9aA"/>
+                                </constraints>
+                                <state key="normal" title="开始识别"/>
+                                <connections>
+                                    <action selector="detectQRCode" destination="WxX-eL-xsI" eventType="touchUpInside" id="WPM-hm-hzF"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="UkX-n7-BdE" firstAttribute="top" secondItem="vWC-9l-FEH" secondAttribute="bottom" constant="53" id="9NR-dx-TKe"/>
+                            <constraint firstItem="UkX-n7-BdE" firstAttribute="centerX" secondItem="Ck8-3b-QEZ" secondAttribute="centerX" id="EAa-bg-OsM"/>
+                            <constraint firstItem="8Wj-Cp-Sa8" firstAttribute="top" secondItem="UkX-n7-BdE" secondAttribute="bottom" constant="27" id="ark-uX-4ZC"/>
+                            <constraint firstItem="8Wj-Cp-Sa8" firstAttribute="centerX" secondItem="Ck8-3b-QEZ" secondAttribute="centerX" id="joo-xd-Idb"/>
+                        </constraints>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="souceImageView" destination="UkX-n7-BdE" id="Mjb-fP-ibG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9zl-92-C8j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1615.5" y="588.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="erweima" width="923" height="419"/>
+    </resources>
 </document>
