绘制识别的二维码边框
绘制识别的二维码边框

--- a/二维码/Classes/DetectorQRCode/Controller/DetectorQRCodeVC.storyboard
+++ b/二维码/Classes/DetectorQRCode/Controller/DetectorQRCodeVC.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="erweima" translatesAutoresizingMaskIntoConstraints="NO" id="UkX-n7-BdE">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="erweima2" translatesAutoresizingMaskIntoConstraints="NO" id="UkX-n7-BdE">
                                 <rect key="frame" x="68" y="117" width="240" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="Rdw-KD-qKw"/>
@@ -56,6 +56,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="erweima" width="923" height="419"/>
+        <image name="erweima2" width="925" height="512"/>
     </resources>
 </document>
