--- a/二维码/Classes/DetectorQRCode/Controller/DetectorQRCodeVC.storyboard
+++ b/二维码/Classes/DetectorQRCode/Controller/DetectorQRCodeVC.storyboard
@@ -35,13 +35,26 @@
                                     <action selector="detectQRCode" destination="WxX-eL-xsI" eventType="touchUpInside" id="WPM-hm-hzF"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oJq-TV-33e">
+                                <rect key="frame" x="164" y="322" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="4nC-HN-7jE"/>
+                                    <constraint firstAttribute="height" constant="30" id="JN2-8J-dgs"/>
+                                </constraints>
+                                <state key="normal" title="重置"/>
+                                <connections>
+                                    <action selector="reset" destination="WxX-eL-xsI" eventType="touchUpInside" id="SKs-Ge-nWM"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="UkX-n7-BdE" firstAttribute="top" secondItem="vWC-9l-FEH" secondAttribute="bottom" constant="53" id="9NR-dx-TKe"/>
                             <constraint firstItem="UkX-n7-BdE" firstAttribute="centerX" secondItem="Ck8-3b-QEZ" secondAttribute="centerX" id="EAa-bg-OsM"/>
+                            <constraint firstItem="oJq-TV-33e" firstAttribute="centerX" secondItem="Ck8-3b-QEZ" secondAttribute="centerX" id="IwD-3b-Nu2"/>
                             <constraint firstItem="8Wj-Cp-Sa8" firstAttribute="top" secondItem="UkX-n7-BdE" secondAttribute="bottom" constant="27" id="ark-uX-4ZC"/>
                             <constraint firstItem="8Wj-Cp-Sa8" firstAttribute="centerX" secondItem="Ck8-3b-QEZ" secondAttribute="centerX" id="joo-xd-Idb"/>
+                            <constraint firstItem="oJq-TV-33e" firstAttribute="top" secondItem="8Wj-Cp-Sa8" secondAttribute="bottom" constant="20" id="nnb-Xh-ZBw"/>
                         </constraints>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
