实现扫描功能
实现扫描功能

--- a/二维码/Classes/ScanQRCode/Controller/ScanQRCodeVC.storyboard
+++ b/二维码/Classes/ScanQRCode/Controller/ScanQRCodeVC.storyboard
@@ -27,7 +27,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                     </imageView>
                                 </subviews>
-                                <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="rbB-RF-ZKs" secondAttribute="bottom" id="8qB-U2-31O"/>
                                     <constraint firstAttribute="height" constant="200" id="9KO-LC-N96"/>
